// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`admin get starter pack view getStarterPack() gets a starterpack by uri 1`] = `
{
  "starterPack": {
    "cid": "cids(0)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "feeds": [
      {
        "cid": "cids(3)",
        "creator": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "description": "its me!",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [
            {
              "cid": "cids(2)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(3)",
              "val": "self-label-a",
            },
            {
              "cid": "cids(2)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(3)",
              "val": "self-label-b",
            },
          ],
          "viewer": {
            "blockedBy": false,
            "muted": false,
          },
        },
        "did": "did:web:example.com",
        "displayName": "alice's feedgen",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "likeCount": 0,
        "uri": "record(2)",
        "viewer": {},
      },
    ],
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "joinedAllTimeCount": 0,
    "joinedWeekCount": 0,
    "labels": [],
    "list": {
      "cid": "cids(4)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "listItemCount": 3,
      "name": "n/a",
      "purpose": "app.bsky.graph.defs#referencelist",
      "uri": "record(1)",
      "viewer": {
        "muted": false,
      },
    },
    "listItemsSample": [
      {
        "subject": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "did": "user(2)",
          "handle": "carol.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "muted": false,
          },
        },
        "uri": "record(4)",
      },
      {
        "subject": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(1)",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "description": "hi im bob label_me",
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "muted": false,
          },
        },
        "uri": "record(5)",
      },
      {
        "subject": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
            "chat": {
              "allowIncoming": "none",
            },
          },
          "did": "user(5)",
          "handle": "dan.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "muted": false,
          },
        },
        "uri": "record(6)",
      },
    ],
    "record": {
      "$type": "app.bsky.graph.starterpack",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "feeds": [
        {
          "uri": "record(2)",
        },
      ],
      "list": "record(1)",
      "name": "alice's starter pack",
    },
    "uri": "record(0)",
  },
}
`;

exports[`admin get starter pack view getStarterPack() gets a starterpack while taken down 1`] = `
{
  "cid": "cids(0)",
  "creator": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
    "labels": [
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(3)",
        "val": "self-label-a",
      },
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(3)",
        "val": "self-label-b",
      },
    ],
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  "feeds": [
    {
      "cid": "cids(3)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "did": "did:web:example.com",
      "displayName": "alice's feedgen",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "uri": "record(2)",
      "viewer": {},
    },
  ],
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "joinedAllTimeCount": 0,
  "joinedWeekCount": 0,
  "labels": [],
  "list": {
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 3,
    "name": "n/a",
    "purpose": "app.bsky.graph.defs#referencelist",
    "uri": "record(1)",
    "viewer": {
      "muted": false,
    },
  },
  "listItemsSample": [
    {
      "subject": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(2)",
        "handle": "carol.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(6)",
          "following": "record(5)",
          "muted": false,
        },
      },
      "uri": "record(4)",
    },
    {
      "subject": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(9)",
          "following": "record(8)",
          "muted": false,
        },
      },
      "uri": "record(7)",
    },
    {
      "subject": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "chat": {
            "allowIncoming": "none",
          },
        },
        "did": "user(5)",
        "handle": "dan.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "following": "record(11)",
          "muted": false,
        },
      },
      "uri": "record(10)",
    },
  ],
  "record": {
    "$type": "app.bsky.graph.starterpack",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "feeds": [
      {
        "uri": "record(2)",
      },
    ],
    "list": "record(1)",
    "name": "alice's starter pack",
  },
  "uri": "record(0)",
}
`;

exports[`admin get starter pack view getStarterPack() gets a starterpack while taken down 2`] = `
{
  "cid": "cids(0)",
  "creator": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
    "labels": [
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(3)",
        "val": "self-label-a",
      },
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(3)",
        "val": "self-label-b",
      },
    ],
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  "feeds": [
    {
      "cid": "cids(3)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "did": "did:web:example.com",
      "displayName": "alice's feedgen",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "uri": "record(2)",
      "viewer": {},
    },
  ],
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "joinedAllTimeCount": 0,
  "joinedWeekCount": 0,
  "labels": [
    {
      "cid": "cids(0)",
      "cts": "1970-01-01T00:00:00.000Z",
      "src": "user(2)",
      "uri": "record(0)",
      "val": "!takedown",
    },
  ],
  "list": {
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 3,
    "name": "n/a",
    "purpose": "app.bsky.graph.defs#referencelist",
    "uri": "record(1)",
    "viewer": {
      "muted": false,
    },
  },
  "listItemsSample": [
    {
      "subject": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(3)",
        "handle": "carol.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "uri": "record(4)",
    },
    {
      "subject": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(4)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "uri": "record(5)",
    },
    {
      "subject": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "chat": {
            "allowIncoming": "none",
          },
        },
        "did": "user(6)",
        "handle": "dan.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "uri": "record(6)",
    },
  ],
  "record": {
    "$type": "app.bsky.graph.starterpack",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "feeds": [
      {
        "uri": "record(2)",
      },
    ],
    "list": "record(1)",
    "name": "alice's starter pack",
  },
  "uri": "record(0)",
}
`;
